# kid_size_public

./: .gitignore  BEHAVIORS_TEST  CMakeLists.txt  README.md  organisation_kid_size_open_iran.org  package.xml
Docs/: branchs.txt  startup.md  walk.md
KidSize/: README.md  backtrace.cpp  backtrace.h  buildinfos.c  buildinfos.h  main.cpp  python.cpp  start.cpp  start.h
Manufacturing/: analyze_prices.r  documentation_fabrication_sigmaban.org  export_jobs_cnc.org  materiel.org  materiel_a_commander  materiel_necessaire_assemblage  materiel_necessaire_entretien  materiel_robotis.org  pieces_sigmaban.org  rhoban_refactoring.org  usinage_pieces_liste  usinage_pieces_liste.org
Manufacturing/calibration_set/: Makefile  geometry.py  laser.py  print_aruco.py  robot.py  turtle.py
Misc/: 45-names.rules  README.md
Motion/engines/: Sources.cmake  test_walk_engine.cpp  walk_engine.cpp  walk_engine.h
Motion/moves/: Approach.cpp  Approach.h  ApproachMove.cpp  ApproachMove.h  ApproachPotential.cpp  ApproachPotential.cpp.bak  ApproachPotential.h  ApproachPotential.h.bak  Arms.cpp  Arms.h  ArucoCalibration.cpp  ArucoCalibration.h  AutonomousPlaying.cpp  AutonomousPlaying.h  CameraCalibration.cpp  CameraCalibration.hpp  ClearingKickController.cpp  ClearingKickController.h  GoalKeeper.cpp  GoalKeeper.cpp.back  GoalKeeper.h  GoalKick.cpp  GoalKick.hpp  Head.cpp  Head.h  IMUTest.cpp  IMUTest.h  Kick.cpp  Kick.h  KickCalibration.cpp  KickCalibration.hpp  KickController.cpp  KickController.h  KickPhilipp.cpp  KickPhilipp.hpp  LateralStep.cpp  LateralStep.hpp  LearnedApproach.cpp  LearnedApproach.h  LogMachine.cpp  (+68 more)
Motion/python/: potential.py
Motion/scheduler/: Helpers.cpp  Helpers.h  MoveScheduler.cpp  MoveScheduler.h  Sources.cmake
Motion/services/: CaptainService.cpp  CaptainService.h  DecisionService.cpp  DecisionService.h  LocalisationService.cpp  LocalisationService.h  MaintenanceService.cpp  MaintenanceService.h  ModelService.cpp  ModelService.h  RefereeService.cpp  RefereeService.h  RobotModelService.cpp  RobotModelService.h  Service.cpp  Service.h  Services.cpp  Services.h  Sources.cmake  StrategyService.cpp  StrategyService.h  TeamPlayService.cpp  TeamPlayService.h  ViveService.cpp  ViveService.h
Motion/strategy/: CorridorProfile.cpp  CorridorProfile.hpp  KickQLearning.cpp  KickQLearning.hpp  KickStrategy.cpp  KickStrategy.hpp  KickValueIteration.cpp  KickValueIteration.hpp  PlacementOptimizer.cpp  PlacementOptimizer.h  Sources.cmake  main.cpp  plot_strategy.r
Utils/history/: History.cpp  History.h
Vision/: .clang-format  .gitignore  Readme  manual.org
Vision/Application/: Application.cpp  Application.hpp  Sources.cmake
Vision/Binding/: LocalisationBinding.cpp  LocalisationBinding.hpp  Robocup.cpp  Robocup.hpp  Sources.cmake  SpecialImageHandler.cpp  SpecialImageHandler.hpp
Vision/CameraState/: CameraState.cpp  CameraState.hpp  Sources.cmake
Vision/Configurations/: Application.xml  BallHistogram.xml  ChannelPicker.xml  Player.xml  PlayerC910.xml  PlayerPtGrey.xml  PlayerV4l2.xml  aruco_detector.json
Vision/Doc/: .gitignore  Makefile  PipelineDescription.tex
Vision/Doc/diagrams/: ballDetection.tex  clipping.tex  goalDetection.tex  rules.tex
Vision/Examples/: Player.cpp
Vision/Features/: README  Sources.cmake  brisk.cpp
Vision/Features/brisk/: brisk.h
Vision/Features/nonfree/: nonfree.hpp  precomp.hpp
Vision/Field/: Field.cpp  Field.hpp  Sources.cmake
Vision/Filters/: DebugLevel.cpp  DebugLevel.hpp  Filter.cpp  Filter.hpp  FilterFactory.cpp  FilterFactory.hpp  Pipeline.cpp  Pipeline.hpp  Readme.md  Sources.cmake  create_cmake.sh  create_sub_factories.sh
Vision/Filters/Ball/: BallByDNN.cpp  BallByDNN.hpp  BallByII.cpp  BallByII.hpp  BallFactory.cpp  BallFactory.hpp  BallProvider.cpp  BallProvider.hpp  Sources.cmake
Vision/Filters/Basics/: AbsDiff.cpp  AbsDiff.hpp  BasicsFactory.cpp  BasicsFactory.hpp  Blur.cpp  Blur.hpp  Diff.cpp  Diff.hpp  Dilate.cpp  Dilate.hpp  Erode.cpp  Erode.hpp  Histogram.cpp  Histogram.hpp  Integral.cpp  Integral.hpp  Invert.cpp  Invert.hpp  Mask.cpp  Mask.hpp  MaskOr.cpp  MaskOr.hpp  MovieRecorder.cpp  MovieRecorder.hpp  Mult.cpp  Mult.hpp  Norm.cpp  Norm.hpp  Rescale.cpp  Rescale.hpp  Sources.cmake  Threshold.cpp  Threshold.hpp  Undistort.cpp  Undistort.hpp
Vision/Filters/Colors/: ChannelSelector.cpp  ChannelSelector.hpp  ColorBounding.cpp  ColorBounding.hpp  ColorConverter.cpp  ColorConverter.hpp  ColorsFactory.cpp  ColorsFactory.hpp  Sources.cmake
Vision/Filters/Custom/: BallRadiusProvider.cpp  BallRadiusProvider.hpp  ClippingByBorder.cpp  ClippingByBorder.hpp  ColorDensity.cpp  ColorDensity.hpp  CustomFactory.cpp  CustomFactory.hpp  EverythingByDNN.cpp  EverythingByDNN.hpp  FieldBorder.cpp  FieldBorder.hpp  (+14 more)
Vision/FrameSource/: Exceptions.hpp  FrameSrc.hpp  ImageSequence.cpp  ImageSequence.hpp  Sources.cmake  yuv_convert.h  yuv_convert.s
Vision/Hough/: Hough.cpp  Hough.hpp  Sources.cmake
Vision/Localisation/: Basis.txt  RadarFilter.hpp  RadarFilterPoint.cpp  RadarFilterPoint.hpp  RobotBasis.cpp  RobotBasis.hpp  Sources.cmake
Vision/Protobuf/: camera_state.proto  video.proto
Vision/Tags/: ArucoTag.cpp  ArucoTag.hpp  CalibrationSet.cpp  CalibrationSet.hpp  Sources.cmake  TagsCollection.hpp  TagsSheet.cpp  TagsSheet.hpp
Vision/Test/: LocalisationTest.cpp  Sources.cmake  TestCameraState.cpp  TestCameraState.hpp
Vision/Utils/: BlobUtils.cpp  BlobUtils.hpp  Drawing.cpp  Drawing.hpp  HomogeneousTransform.cpp  HomogeneousTransform.hpp  IDSExceptions.cpp  IDSExceptions.hpp  ImageLogger.cpp  ImageLogger.h  Interface.cpp  Interface.h  OpencvUtils.cpp  OpencvUtils.h  ParamsContainer.hpp  PatchTools.cpp  PatchTools.hpp  PtGreyExceptions.cpp  PtGreyExceptions.hpp  ROITools.cpp  ROITools.hpp  RotatedRectUtils.cpp  RotatedRectUtils.hpp  SafePtr.hpp  Segment.hpp  Sources.cmake
montreal/: commande_dynamixel.org  planning.org
open_brest/: avant_de_partir.org  on_site.org  tagger.org
open_iran/: depenses.org  kick_distances.csv  matchs.org  notes_pour_le_futur.org  planning.org
tests/services/: vive_service.cpp
(+106 files in other folders)
