<?xml version="1.0"?>
<package>
  <name>kid_size</name>
  <version>0.0.0</version>
  <description>
    Tout plein de chose
  </description>

  <maintainer email="qrouxel@labri.fr">Quentin Rouxel</maintainer>
  <maintainer email="rfabre@labri.fr">Rémi Fabre</maintainer>
  <maintainer email="gpassault@labri.fr">Grégoire Passault</maintainer>
  <maintainer email="ly@labri.fr">Olivier Ly</maintainer>
  <maintainer email="snguyen@labri.fr">Steve N'guyen</maintainer>
  <maintainer email="lhofer@labri.fr">Ludovic Hofer</maintainer>

  <license>MIT</license>

  <author email="qrouxel@labri.fr">Quentin Rouxel</author>
  <author email="rfabre@labri.fr">Rémi Fabre</author>
  <author email="gpassault@labri.fr">Grégoire Passault</author>
  <author email="ly@labri.fr">Olivier Ly</author>
  <author email="snguyen@labri.fr">Steve N'guyen</author>
  <author email="lhofer@labri.fr">Ludovic Hofer</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>hl_labelling</build_depend> <!-- rhoban/hl_labelling -->
  <build_depend>RhAL</build_depend> <!-- rhoban/rhal -->
  <build_depend>robot_model</build_depend> <!-- rhoban/robot_model -->
  <build_depend>robocup_referee</build_depend> <!-- rhoban/robocupreferee -->
  <build_depend>rhoban_graphs</build_depend> <!-- rhoban/graphs -->
  <build_depend>rhoban_unsorted</build_depend> <!-- rhoban/unsorted -->
  <build_depend>rhoban_random</build_depend> <!-- rhoban/random -->
  <build_depend>rhoban_team_play</build_depend> <!-- rhoban/teamplay -->
  <build_depend>rhoban_model_learning</build_depend> <!-- rhoban/model_learning -->
  <build_depend>csa_mdp_experiments</build_depend> <!-- rhoban/csa_mdp_experiments.git -->
  <build_depend>vive_provider</build_depend> <!-- rhoban/vive_provider -->
  <build_depend>tclap</build_depend> <!-- rhobandeps/tclap -->

  <run_depend>hl_labelling</run_depend>
  <run_depend>RhAL</run_depend>
  <run_depend>robot_model</run_depend>
  <run_depend>robocup_referee</run_depend>
  <run_depend>rhoban_graphs</run_depend>
  <run_depend>rhoban_unsorted</run_depend>
  <run_depend>rhoban_random</run_depend>
  <run_depend>rhoban_team_play</run_depend>
  <run_depend>rhoban_model_learning</run_depend>
  <run_depend>csa_mdp_experiments</run_depend>
  <run_depend>vive_provider</run_depend>
  <run_depend>tclap</run_depend>

</package>
